k8s/admin/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scrabble-admin
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: scrabble-admin
  template:
    metadata:
      labels:
        app: scrabble-admin
    spec:
      containers:
      - name: admin
        image: ghcr.io/zipleix/scrabble-admin:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
          name: http
---
apiVersion: v1
kind: Service
metadata:
  name: scrabble-admin-svc
  namespace: default
spec:
  ports:
  - port: 3000
    targetPort: 3000
    name: http
  selector:
    app: scrabble-admin
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: scrabble-admin-ingress
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    external-dns.alpha.kubernetes.io/target: 82.67.198.156
spec:
  ingressClassName: traefik
  rules:
  - host: admin.scrabble.baptiste.zip
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: scrabble-admin-svc
            port:
              number: 3000
  tls:
  - hosts:
    - admin.scrabble.baptiste.zip
    secretName: admin-scrabble-baptiste-zip-tls
